# texpense

./: .env  .gitignore  Cargo.toml  README.md  design-home.excalidraw  design.excalidraw  schema.sql
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: app.rs  cli.rs  db.rs  handler.rs  main.rs  tui.rs  ui.rs
src/entities/: account.rs  category.rs  mod.rs  payment.rs  prelude.rs  template.rs  transaction.rs
src/tab/: home.rs  mod.rs  options.rs  statistics.rs
