[package]
name = "texpense"
version = "0.1.0"
authors = ["jisef <josef.holzapfel63@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
dotenvy = "0.15.7"
futures = "0.3.31"
ratatui = "0.29.0"
sea-orm = { version = "1.1.7", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.40.0", features = ["full"] }
