[package]
name = "texpense"
version = "0.1.0"
authors = ["jisef <josef.holzapfel63@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
async-once-cell = "0.5.4"
clap = { version = "4.5.32", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
dotenvy = "0.15.7"
futures = "0.3.31"
ratatui = { version = "0.29.0", features = ["all-widgets", "widget-calendar"] }
ratatui_input = "0.1.3"
sea-orm = { version = "1.1.7", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
time = { version = "0.3.39", features = ["local-offset"] } # is used
tokio = { version = "1.40.0", features = ["full"] }
tui-textarea = "0.7.0"
tui-tree-widget = "0.23.0"
